BUG 10428, 10456, 10455: Fix some resizing stuff in designer * Heights weren't being properly changed in the dom, so do that on propWrite * overflow: hidden for Pictures * Add Picture to Report Builder * Adjust resize handle up a bit, give it a double-arrow cursor
QA: Bugs should be fixed. Picture should be available in Report Builder

--- a/app/styles/components.sass
+++ b/app/styles/components.sass
@@ -185,6 +185,9 @@ body.socrata-page
     list-style: decimal
     list-style-position: inside
 
+.component-Picture
+  overflow: hidden
+
 .component-Property
   font-size: 1.2em
 
