--- a/app/styles/configurator.sass
+++ b/app/styles/configurator.sass
@@ -55,7 +55,9 @@
   @include transition-duration(0.8s)
   .ui-resizable-handle
     background-color: $color_chrome_box_border
+    bottom: 0
     @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.7))
+    cursor: ns-resize
   .cfViewTypeWrapper
     display: inline-block
     height: 100%
@@ -163,7 +165,7 @@ body.configuring
     @include component-colors($designer_components_input_color, InlineFilter)
 
   .componentPaletteReport .sectionContent .componentCreate
-    @include component-colors($designer_components_content_color, Header, Title, FormattedText, Print, Share, Chart, Map, Table)
+    @include component-colors($designer_components_content_color, Header, Title, FormattedText, Picture, Print, Share, Chart, Map, Table)
   .componentPaletteAdvanced .sectionContent .componentCreate
     @include component-colors($designer_components_actions_color, Map, MapLayer, BubbleChart, ColumnChart, LineChart, PieChart)
 
